alignment Fix

--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -18,7 +18,14 @@ body {
 }
 
 .publication-card{
-  padding: auto;
+  justify-content: center;
+  margin-top: 10px;
+  transition:2s;
+}
+.card:hover{
+  box-shadow: 8px 8px 8px rgb(77, 77, 75);
+  transform:scale(.8);
+  cursor: grab;
 }
 
 .small-text {
@@ -45,6 +52,7 @@ body {
   margin-left: 10px;
   margin-right: 10px;
   height: 390px;
+  margin-bottom: 10px;
 }
 ul {
   margin: 0;
@@ -60,7 +68,7 @@ a {
   transition: all 0.4s ease;
 }
 a:hover {
-  color: #ffc200 !important;
+  color: #986ef8 !important;
 }
 
 .navbar-brand .uil {
@@ -630,10 +638,6 @@ b, strong {
   margin: 20px;
 }
 
-/* Add a hover effect if you want */
-.fa:hover {
-  opacity: 0.7;
-}
 
 /* Set a specific color for each brand */
 
@@ -696,11 +700,43 @@ b, strong {
 .cc {width: 75%; background-color: #F1EECD;} /* Dark Grey */
 .bc {width: 90%; background-color: #C9DECE;}
 .ml {width: 80%; background-color: #C3BCCF}
-/* .skill-container{
-  padding-left: 5%;
-  padding-right: 5%;
-  margin-left: 5px;
-  margin-right: 5px;
-  margin-bottom: 2px;
-  min-width: 100%;
-} */
+.skill-container{
+  padding-bottom: 20px !important;
+}
+
+.skill-container > h3{
+  margin-bottom: 0% !important;
+}
+
+@keyframes bounce {
+	0%, 100%, 20%, 50%, 80% {
+		-webkit-transform: translateY(0);
+		-ms-transform:     translateY(0);
+		transform:         translateY(0)
+	}
+	40% {
+		-webkit-transform: translateY(-30px);
+		-ms-transform:     translateY(-30px);
+		transform:         translateY(-30px)
+	}
+	60% {
+		-webkit-transform: translateY(-15px);
+		-ms-transform:     translateY(-15px);
+		transform:         translateY(-15px)
+	}
+}
+.fa {  
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+  -webkit-animation-timing-function: ease-in-out;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: infinite;
+  -webkit-animation-iteration-count: infinite;
+}
+.fa:hover {
+  cursor: pointer;
+  animation-name: bounce;
+  -moz-animation-name: bounce;
+}
